# vschk

./: .gitignore  Design.doc  README.md
SQL/: datase_scripts.txt
Source/: CMakeLists.txt  cppan.yml  packages.config
Source/VehicleDAO/: CMakeLists.txt  ReadMe.txt  VehicleDAO.cpp  VehicleDAO.h  VehicleDAO.vcxproj  VehicleDAO.vcxproj.filters  VehicleDAOMacros.h
Source/VehicleObjects/: CMakeLists.txt  JsonObject.cpp  Jsonable.cpp  ReadMe.txt  StolenVehicleInfo.h  VehicleObjects.vcxproj  VehicleObjects.vcxproj.filters  VehicleObjectsMacros.h  VehicleOwner.h
Source/VehicleServices/: CMakeLists.txt  CrabInterfaces.h  HttpHandler.h  RESTResponse.cpp  RESTUriParser.cpp  ServiceEngine.cpp  ServiceEngine.h  VehicleServer.cpp  VehicleServices.vcxproj  VehicleServices.vcxproj.filters  WSVehicleSearch.h  crab_headers.h  web_common.h
Source/VehicleServicesUT/: RESTUriParserUT.cpp  ServiceEngineUT.cpp  VehicleServicesUT.vcxproj  VehicleServicesUT.vcxproj.filters
Source/VehicleWebApp/: HttpRequester.cpp  JsonObject.cpp  JsonObject.h  RESTResponse.h  StolenVehicleInfo.cpp  StolenVehicleInfo.h  VehicleOwner.cpp  VehicleWebApp.vcxproj  WebAppMacros.h
Source/common/: IniReader.h  string_util.hpp
_Source/: VehicleManager.sln  VehicleManager.vcxproj  vschk-config.h.in
_Source/VehicleDAO/: stdafx.cpp
_Source/VehicleObjects/: JsonObject.h  StolenVehicleInfo.cpp  VehicleObjects.vcxproj  VehicleOwner.cpp  stdafx.cpp
_Source/VehicleServices/: ReadMe.txt  WSVehicleSearch.cpp
_Source/VehicleServicesUT/: VehicleServiceUT.cpp  VehicleServicesUT.vcxproj  app.ini  stdafx.cpp
_Source/VehicleWebApp/: HttpRequester.h  RESTResponse.cpp  VehicleWebApp.vcxproj.filters  app.ini  main.cpp
source/: CMakeLists.txt  cppan.yml  install-dependencies.bat  packages.config
source/CMakeScripts/: boost.cmake  cpprestsdk.cmake  webtoolkit.cmake
source/VehicleDAO/: CMakeLists.txt  VehicleDAO.cpp  VehicleDAO.h  VehicleDAOMacros.h
source/VehicleObjects/: CMakeLists.txt  Jsonable.h  VehicleObjectsMacros.h
source/VehicleServices/: CMakeLists.txt  HttpHandler.cpp  RESTResponse.h  RESTUriParser.cpp  RESTUriParser.h  ServiceEngine.cpp  VehicleServer.cpp  WSVehicleSearch.cpp  app.ini  stdafx.h  web_common.h
source/VehicleServicesUT/: CMakeLists.txt  RESTUriParserUT.cpp  ServiceEngineUT.cpp  VehicleServiceUT.cpp  VehicleServicesUTMacros.h
source/VehicleWebApp/: CMakeLists.txt  HttpRequester.cpp  HttpRequester.h  JsonObject.h  RESTResponse.cpp  StolenVehicleInfo.cpp  VehicleOwner.cpp  VehicleOwner.h  WebAppMacros.h  main.cpp  run-web-app  run-web-app.bat
source/common/: IniReader.cpp
